Bug #31980 API disconnect during node failure, can lead to node crash
Submitted: 31 Oct 2007 9:42 Modified: 14 Dec 2007 20:33
Reporter: Geert Vanderkelen Email Updates:
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:drop6, 6.2, 6.3 OS:Any
Assigned to: Jonas Oreland Target Version:
Triage: D2 (Serious)

[31 Oct 2007 9:42] Geert Vanderkelen
Description:
Killing a data node when an multi-threaded NDB API application is inserting data, makes
the other data node exit with following error:

Error: 2341
Error data: dbtc/DbtcMain.cpp
Error object: DBTC (Line: 7809) 0x0000000a

This happens in a Cluster running no arbitrator (ArbitrationRank=0). Also, DiskLess
option is used.

How to repeat:
* a NDB API application with 40 threads inserting data
* on same machine running the NDB API app, data node 3 running
* killing both the application and data node 3, makes node 4 exit with:

Error: 2341
Error data: dbtc/DbtcMain.cpp
Error object: DBTC (Line: 7809) 0x0000000a
Program: /data1/mysql/5.1.22_6.2.7/bin/ndbd
Pid: 5013
Trace: /data2/users/geert/cluster/master/ndb_4_trace.log.3

Attaching the NDB API used to reproduce.
[7 Nov 2007 11:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/37247

ChangeSet@1.2171, 2007-11-07 12:27:53+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#31980
    Fix problem with API disconnecting "during" TC-take-over handling after node failure)
[7 Nov 2007 12:08] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/37249

ChangeSet@1.2673, 2007-11-07 13:07:46+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#31980
    Fix problem with api disconnect 'during' TC-take-over (after node failure)
[7 Nov 2007 12:46] Jonas Oreland
pushed to drop6, telco-6.2 & telco-6.3
[8 Nov 2007 13:27] Jon Stephens
Documented fix in 5.1.22-ndb-6.2.8 and 5.1.22-ndb-6.3.6 changelogs. Left status as PQ.
[14 Dec 2007 17:09] Bugs System
Pushed into 6.0.5-alpha
[14 Dec 2007 20:33] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Now also documented in the 6.0.5 changelog.