ndb - bug#31980   Fix problem with api disconnect 'during' TC-take-over (after node failure)